@@ -56,7 +56,7 @@ public class LSAUtils {
 					} else
 						edges.add(v.getEdgeTo(w));
 				}
-				var toDelete = v.outEdgesStream(false).filter(e -> !edges.contains(e)).collect(Collectors.toList());
+				var toDelete = v.outEdgesStream(false).filter(e -> !edges.contains(e)).toList();
 				toDelete.forEach(lsaTree::deleteEdge);
 				v.rearrangeAdjacentEdges(edges);
 			}
@@ -80,7 +80,7 @@ public class LSAUtils {
 			try (var visited = tree.newNodeSet()) {
 				var queue = new LinkedList<Node>();
 				queue.add(v);
-				while (queue.size() > 0) {
+				while (!queue.isEmpty()) {
 					v = queue.pop();
 					if (visited.containsAll(IteratorUtils.asList(v.parents()))) {
 						method.accept(v);
